# confidential-guardian

./: .gitignore  README.md  data.py  gaussian_experiments.ipynb  image_experiments.ipynb  main.py  mirage.py  package-lock.json  pyproject.toml  regression_experiments.ipynb  tabular_experiments.ipynb
.github/workflows/: astro.yml
src/components/: Authors.astro  Header.astro
src/pages/: index.mdx
zkp/: CMakeLists.txt  README.md  proof_check.py
zkp/test/: CMakeLists.txt  basic_zk.cpp  nn_unit.cpp  zkp_calibration_benchmark.cpp
zkp/zk-confidence/: fairness_zk.cpp  model_zk.cpp  utils.cpp
